# assignment-2-arvind747

./: CMakeLists.txt  cross-compile.txt  unit-test.sh
assignment-autotest/: CMakeLists.txt
finder-app/: Makefile  finder-test.sh  finder.sh  writer.c  writer.sh
